# ChangeLog for dev-libs/iniparser
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/iniparser/ChangeLog,v 1.16 2010/04/11 08:18:38 dev-zero Exp $

*iniparser-3.0b-r2 (11 Apr 2010)

  11 Apr 2010; Tiziano Müller <dev-zero@gentoo.org>
  iniparser-3.0b-r1.ebuild, +iniparser-3.0b-r2.ebuild,
  +files/iniparser-3.0b-cpp.patch, +files/iniparser-3.0b-makefile.patch:
  Respect CC properly (bug #296050, thanks to Jeroen Roovers). Make headers
  C++ compatible (bug #264508, thanks to Lei Qing).

  27 Dec 2009; Joseph Jezak <josejx@gentoo.org> iniparser-3.0b-r1.ebuild:
  Marked ppc/ppc64 stable for bug #291428.

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org> iniparser-3.0b-r1.ebuild:
  ia64/sparc stable wrt #291428

  07 Dec 2009; Jeroen Roovers <jer@gentoo.org> iniparser-3.0b-r1.ebuild:
  Stable for HPPA (bug #291428).

  06 Dec 2009; Tobias Klausmann <klausman@gentoo.org>
  iniparser-3.0b-r1.ebuild:
  Stable on alpha, bug #291428

  26 Nov 2009; Víctor Ostorga <vostorga@gentoo.org> iniparser-3.0b.ebuild,
  iniparser-3.0b-r1.ebuild:
  Fixing typo in ebuild DESCRIPTION, bug #294755

  26 Nov 2009; Markus Meier <maekke@gentoo.org> iniparser-3.0b-r1.ebuild:
  amd64/arm/x86 stable, bug #291428

  22 Jul 2009; Joseph Jezak <josejx@gentoo.org> iniparser-3.0b-r1.ebuild:
  Marked ~ppc/~ppc64 for bug #275429.

  05 Jul 2009; Javier Villavicencio <the_paya@gentoo.org>
  iniparser-3.0b-r1.ebuild:
  Add ~x86-fbsd.

  01 Jul 2009; Raúl Porcel <armin76@gentoo.org> iniparser-3.0b-r1.ebuild:
  Add ~arm/~s390/~sh

  30 Jun 2009; Raúl Porcel <armin76@gentoo.org> iniparser-3.0b-r1.ebuild:
  Add ~ia64/~sparc wrt #275429

  28 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  iniparser-3.0b-r1.ebuild:
  Keyworded on alpha, bug #275429

  26 Jun 2009; Jeroen Roovers <jer@gentoo.org> iniparser-3.0b-r1.ebuild:
  Marked ~hppa (bug #275429).

*iniparser-3.0b-r1 (04 May 2009)
