@@ -3,7 +3,7 @@ AUX iniparser-3.0b-fix-set-functions.patch 1273 RMD160 42d9afa071b01a0ceb054ceaa
 AUX iniparser-3.0b-makefile.patch 1351 RMD160 fc0345bfd6640e8f898436e9fc8460ca5c11a20c SHA1 918fbcadedadefc15cbbce7561f2512ce6dc1b0e SHA256 f06c8679a53d135b9d4c1c9141beba9eff32dbb1f0cc09e8631259ec28e37120
 DIST iniparser3.0b.tar.gz 26080 RMD160 d60234e173a7e888feab24a21a8602834cf64e30 SHA1 0e3672eac056d457699d4121098f0fd3433b9809 SHA256 8a634cadcda15c53c427fc57b783b366df8213e7065646f67ceb526c5bf37426
 EBUILD iniparser-3.0b-r1.ebuild 1162 RMD160 d8060c9c5f8a354edada8409194ff59d5f92d839 SHA1 fcfe2758649f04f2add4c5085c715f4206ba2878 SHA256 5063f62b20f723116cd215ecce9b4e36a8a16225f41b7aeaaaa0affe15a499af
-EBUILD iniparser-3.0b-r2.ebuild 1305 RMD160 0c241f7fd2e2cf823df636a3afbd8cf1d42abf90 SHA1 0992a5f9805a2dd82cde3a1f378cc551305f2443 SHA256 612a94e21b694de9e84a1441c9a227481b704877d0c2b737487c8051c61aa0bf
+EBUILD iniparser-3.0b-r2.ebuild 1391 RMD160 621702c9baebbeacbff172691b5c32388cb40a2f SHA1 25b40f97157e784d325b74138df8da222b944a78 SHA256 fadca833aef804d327c9ab55d47ff2172aefd69c7757e5b901a6d671ca346f28
 EBUILD iniparser-3.0b.ebuild 991 RMD160 3d112ce8a20c1ff28e2966cb1ee77596241d253a SHA1 6d405104a8c7ec1ea7f1cce786373c2b75f8d8bc SHA256 868815596f962402ac06e03ad006f50ef738c9989100022b9cbbc22761467a7b
-MISC ChangeLog 2573 RMD160 8fb4a7a5787f0e4d8dbd0af4a5e489f996ca2ec5 SHA1 2cb2b457f53dc8734cdf5c9ca4c97700540ec15f SHA256 e6190861ee7046b5e96651d504e7ce5865e5e1df68f24ae20351d6ff4a15630a
+MISC ChangeLog 2703 RMD160 482def81fca225902d4cbc322953430476ab5670 SHA1 5c88e289294c83b9b50e2352d0e882d5a18a6b6d SHA256 b1e1ebed43ea27c7ebdc9e9ccd0f755a7762808bb4769eb85a97e014bc688b55
 MISC metadata.xml 243 RMD160 118071f7d6f4da5758ad40dc83e4a18946a54555 SHA1 dd276307a403ff09de2ef4596d4f436e22a646ff SHA256 710a08f21d0ea625d85ffae3040a4f64777b318263dd5323d9b695ea9ded3b02
