@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/iniparser/iniparser-3.0b-r2.ebuild,v 1.1 2010/04/11 08:18:38 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/iniparser/iniparser-3.0b-r2.ebuild,v 1.2 2010/04/11 08:22:05 dev-zero Exp $
 
 EAPI="2"
 
@@ -20,6 +20,9 @@ DEPEND=""
 RDEPEND=""
 
 S="${WORKDIR}/${MY_P}"
+
+# the tests are rather examples than tests, no point in running them
+RESTRICT="test"
 
 src_prepare() {
 	epatch \
