@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/iniparser
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/iniparser/ChangeLog,v 1.16 2010/04/11 08:18:38 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/iniparser/ChangeLog,v 1.17 2010/04/11 08:22:05 dev-zero Exp $
+
+  11 Apr 2010; Tiziano Müller <dev-zero@gentoo.org>
+  iniparser-3.0b-r2.ebuild:
+  ... and disable tests since they are useless.
 
 *iniparser-3.0b-r2 (11 Apr 2010)
 
